--- a/server/plugins/Terraria/Data/wings.yml
+++ b/server/plugins/Terraria/Data/wings.yml
@@ -14,6 +14,9 @@
     verticalSpeed: 1
     maxAcceleration: 100
     horizontalSpeed: 0.8
+静谧之靴:
+    horizontalSpeed: 0.3
+    isBoot: true
 航鱼靴:
     horizontalSpeed: 0.4
     isBoot: true
