new items & feature tweaks
multiple new items to locate biome & structure and manipulate daytime;
diamond ore;
world generation tweaks (massive optimization on cave generation; tweaked sunken sea & abyss border behavior)

--- a/server/plugins/Terraria/Data/blocks.yml
+++ b/server/plugins/Terraria/Data/blocks.yml
@@ -205,6 +205,10 @@ GOLD_ORE:
   totalProgress: 135
   dropItem:
   - 金矿石
+WHITE_GLAZED_TERRACOTTA:
+  totalProgress: 150
+  dropItem:
+  - 钻石:1:2
 RED_GLAZED_TERRACOTTA:
   progress: 世界吞噬者
   powerPickaxe: 50
