--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -935,14 +935,6 @@
   - §7???
   - §6专家模式物品
   rarity: 1000
-盔甲架:
-  item: ARMOR_STAND
-  lore:
-  - §r右键在当前位置放置盔甲架
-  - §r可用于摆放装备和测试伤害
-  - §r盔甲架的护甲和伤害抗性一直保持为0
-  - §r被镐攻击时摧毁
-  rarity: 1
 可疑的眼球:
   item: CLAY_BALL
   lore:
@@ -1350,7 +1342,7 @@
   lore:
   - §r[饰品]
   - §r▣算作勇气之盾
-  - §r双击一个方向来冲刺
+  - §r▷ 冲刺：双击一个方向或按冲刺按键[默认为Z]可以冲刺，具有一定的冷却时间
   - §6专家模式物品
   attributes:
     defence: 6
@@ -1642,7 +1634,7 @@
   - §r获得1.4生命恢复和65%移动速度
   - §a破损：在受到攻击伤害或成为BOSS目标后失效，持续13秒
   worth: 92500
-  rarity: 2
+  rarity: 1
 航鱼靴:
   item: LEASH
   lore:
@@ -2929,7 +2921,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作勇气之盾
-  - §r▷ 冲刺：双击一个方向可以冲刺，具有一定的冷却时间
+  - §r▷ 冲刺：双击一个方向或按冲刺按键[默认为Z]可以冲刺，具有一定的冷却时间
   attributes:
     defence: 16
     damageTakenMulti: -0.03
@@ -2942,7 +2934,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作勇气之盾
-  - §r▷ 冲刺：双击一个方向可以冲刺，具有一定的冷却时间
+  - §r▷ 冲刺：双击一个方向或按冲刺按键[默认为Z]可以冲刺，具有一定的冷却时间
   attributes:
     defence: 32
     damageTakenMulti: -0.05
@@ -2955,7 +2947,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作勇气之盾
-  - §r▷ 冲刺：双击一个方向可以冲刺，具有一定的冷却时间
+  - §r▷ 冲刺：双击一个方向或按冲刺按键[默认为Z]可以冲刺，具有一定的冷却时间
   attributes:
     defence: 32
     damageTakenMulti: -0.07
@@ -2968,7 +2960,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r▣算作勇气之盾
-  - §r▷ 冲刺：双击一个方向可以冲刺，具有一定的冷却时间
+  - §r▷ 冲刺：双击一个方向或按冲刺按键[默认为Z]可以冲刺，具有一定的冷却时间
   attributes:
     defence: 40
     damageTakenMulti: -0.1
@@ -3496,6 +3488,36 @@ Drew之翼:
     reachExtra: 5
   worth: 24000000
   rarity: 12
+盔甲架:
+  item: ARMOR_STAND
+  lore:
+  - §r右键在当前位置放置盔甲架
+  - §r可用于摆放装备和测试伤害
+  - §r盔甲架的护甲和伤害抗性一直保持为0
+  - §r被镐攻击时摧毁
+  rarity: 1
+生物群系指南针:
+  item: NETHER_STAR
+  lore:
+  - §r右键使用后显示附近各种生物群系的坐标及规模
+  - §r在过小的生物群系中挑战BOSS可能影响游戏体验，请注意甄别
+  - §r“丛林的陨落”
+  rarity: 2
+建筑物指南针:
+  item: NETHER_STAR
+  lore:
+  - §r右键使用后显示玩家所在生物群系最近的结构生成判定点
+  - §r部分建筑结构的实际位置会略微偏离判定点
+  - §r“神庙的陨落”
+  rarity: 3
+宇宙之光:
+  item: NETHER_STAR
+  lore:
+  - §r令时间加速流逝，该效果不影响随机刻
+  - §r在出现事件、BOSS或到达清晨/黄昏时效果停止
+  - §r亦可再次使用以取消加速效果
+  - §r“时间洪流怀表”
+  rarity: 5
 木剑:
   item: WOOD_SWORD
   attributes:
